--- a/dataserver/apps/templates/sitedata/mapviewer.html
+++ b/dataserver/apps/templates/sitedata/mapviewer.html
@@ -200,6 +200,7 @@
       <option value="open_circuit">Open Circuit</option>
       <option value="low_voltage">Low Voltage</option>
       <option value="dead_panel">Dead Panel</option>
+      <option value="random">Random</option>
       <option value="reset">✅ Reset to Normal</option>
     </select>
 
